samples/_failures_safe/1761372258_bad276_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c554315.c: In function ‘parse_string’:
./samples/SAFE/__tmp_9c554315.c:159:13: error: expected expression at end of input
  159 |             if (
      |             ^~
./samples/SAFE/__tmp_9c554315.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9c554315.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9c554315.c:159:13: error: expected declaration or statement at end of input
